--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <div class="row collapse block-large-1-4 block-medium-1-3 block-tab-1-2 block-500-stack folio-list">
 
             <div class="column folio-item">
-                <a href="./bibx_guide.html" class="folio-item__thumb">
+                <a href="./bibx_guide.html" class="folio-item__thumb" target="_blank">
                     <img src="./images/wonjiyun/1.jpg" alt="">
                     <div class="pj_box">
                         <p class="sub_title">TIEMPO</p>
